--- a/SpicetifyManager.csproj
+++ b/SpicetifyManager.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows10.0.18362.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.18362.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>True</UseWPF>
     <DebugType>portable</DebugType>
@@ -10,9 +10,15 @@
     <StartupObject>SpicetifyManager.App</StartupObject>
     <IsPublishable>False</IsPublishable>
     <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
-    <PlatformTarget>x64</PlatformTarget>
-    <SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Properties\**" />
+    <EmbeddedResource Remove="Properties\**" />
+    <None Remove="Properties\**" />
+    <Page Remove="Properties\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Remove="Source\Program.cs" />
@@ -33,10 +39,6 @@
     <PackageReference Include="ini-parser" Version="2.5.2" />
     <PackageReference Include="ModernWpfUI" Version="0.9.4" />
     <PackageReference Include="Octokit" Version="0.51.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
