--- a/SpicetifyManager.csproj
+++ b/SpicetifyManager.csproj
@@ -11,6 +11,7 @@
     <IsPublishable>False</IsPublishable>
     <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
