--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,3 @@
 [SpicetifyManagerConfig]
-UserDirectory = %APPDATA%\spicetify\
-CliDirectory  = %LOCALAPPDATA%\spicetify\
+UserDirectory = %APPDATA%\spicetify
+CliDirectory  = %LOCALAPPDATA%\spicetify
